    (Carl Steinbach via namit)

    HIVE-1594. Typo of hive.merge.size.smallfiles.avgsize prevents
    change of value. (Yun Huang Yong via namit)

    HIVE-1600. Making test outputs deterministic by sorting inputs and outputs in hooks
    (John Sichi via namit)

    HIVE-1605. Regression and improvements in handling NULLs in joins
    (Ning Zhang via namit)

  TESTS

    HIVE-1464. improve  test query performance
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1475. .gitignore files being placed in test warehouse directories
    causing build failure
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1489. TestCliDriver -Doverwrite=true does not put the file in
    the correct directory
    (Ning Zhang via jvs)

    HIVE-1601. Hadoop 0.17 ant test broken by HIVE-1523
    (Joydeep Sen Sarma via jvs)

Release 0.6.0 -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

    HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)

    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)

    HIVE-1152. Add metastore API method to drop/append partition by name.
    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

    HIVE-1188. NPE when TestJdbcDriver/TestHiveServer
    (Call Steinbach via Ning Zhang)

    HIVE-1032. Better Error Messages for Execution Errors.
    (Paul Yang via zshao)

    HIVE-1193. ensure sorting properties for a table.
    (Namit via He Yongqiang)

    HIVE-259. Add PERCENTILE aggregate function.
    (Jerome Boulon, Zheng via He Yongqiang)

    HIVE-1197. Add BucketizedHiveInputFormat
    (Siying Dong via namit)
